2005-08-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* mainframe.tcl (MainFrame::create): make ttk theme aware

2005-07-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl: if themed, use ttk::separator
	* scrollframe.tcl: if themed, use ttk::frame
	* font.tcl: if themed, use ttk::comboboxes and ttk::checkbuttons
	* widget.tcl: encapsulate all .#BWidget* hidden widgets into a
	single frame .#BWidget to clean up main '.' childspace.
	Add 'Widget::theme ?boolean?' that, if enabled, has BWidgets try
	to use some ttk themed widgets (*very* incomplete).

	* init.tcl (Widget::_opt_defaults): make a proc for opt defaults,
	recognize aqua as a platform

2005-02-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* lang/da.rc (new): Danish language file [Bug 1151534] (elhaard)

2005-01-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* notebook.tcl: reverted lester patch - too many bugs related to
	deleting and reinsertion of tabs.

2004-12-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* notebook.tcl: speed improvements via array hashing for many tabs
	(lester).

2004-10-09  Rolf Ade  <pointsman@users.sourceforge.net>

	* mainframe.tcl: (MainFrame::_parse_accelerator) made
	  accelerator Ctrl-f in -menu definitions work. [Bug 1043107] 

2004-09-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* color.tcl: use toplevel instead of menu for dropdown color menu
	and do better focus/grab restoration.

	* utils.tcl (BWidget::RestoreFocusGrab,SetFocusGrab): add BWidget
	equivalents of what Tk uses for better stacked grab/focus mgmt.

	* dialog.tcl (Dialog::create): withdraw topleve immediately after
	creation.

2004-09-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* listbox.tcl: add FocusIn redirector to %W.c, add explicit
	-takefocus 0 to the frame parent.

	* widget.tcl (Widget::focusPrev): hack to avoid focus into direct
	parent when it is a megawidget. [Bug 765667]

	* notebook.tcl (NoteBook::_draw_page): adjust height for bottom
	drawn tabs. [Bug 988628]

2004-09-09  Jeff Hobbs  <jeffh@ActiveState.com>
